[package]
name = "pocketflow_template_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core flow framework
pocketflow_rs = "0.1"

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "json", "tokio"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# LLM + HTTP
async-openai = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
base64 = "0.22"

# CSV ingestion (RAG seed)
csv = "1.3"

# Global state
once_cell = "1"

# Load local .env
dotenv = "0.15"

# IDs + time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

# RAG (brain-only)
rrag = { version = "0.1.0-alpha.2", default-features = true }

# Audio playback (TTS)
rodio = { version = "0.20", default-features = false, features = ["symphonia-mp3"] }
neo4rs = "0.8"
